# school

./: .gitignore  Client.hs  Daemon.hs  Gui.hs  Main.hs  README.md  SchoolGui.hs  school.cabal  school.cfg  school.glade  school.yml
School/: Client.hs  Config.hs  Daemon.hs  Gui.hs  Network.hs  Time.hs  Types.hs
