Name: school
Version: 1.0.0
Build-type: Simple
Build-Depends: network
               , base
               , gtk
               , glade
               , process
               , bytestring
               , timers
               , suspend

Data-files: school.glade

Executable: school
Main-Is: Main.hs
GHC-Options: -O2 -threaded
