Name: school
Version: 1.0.0
Build-type: Simple
Build-Depends: network
               , base
               , gtk
               , glade
               , process
               , bytestring
               , timers
               , suspend

Data-files: school.glade

Executable: school-gui
Main-Is: Gui.hs
GHC-Options: -O2 -threaded

Executable: school-daemon
Main-Is: Client.hs
GHC-Options: -O2 
