Name: school
Version: 1.0.0
Build-type: Simple
Build-Depends: network
               , base
               , gtk
               , unix-time
               , glade
               , process
               , bytestring
               , aeson
               , unix
               , yaml-config
               , mtl
               , MissingH
               , transformers

Data-files: school.glade

Executable: school-gui
Main-Is: Gui.hs
GHC-Options: -O2 -threaded

-- WARNING: when compiled with -threaded, this program is likely not going
-- to work. As soon as one writes to the stdin of the forked process, it 
-- zombifies and any other command with crash this program.
Executable: school-daemon
Main-Is: Daemon.hs
GHC-Options: -O2
